[package]
name = "td_rthreadpool"
version = "0.1.2"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "thread wrapper for Rust"
repository = "https://github.com/tickbh/td_rthreadpool"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["threadpool", "mutex"]

[dependencies]
libc = "^0.2.1"